<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/command_type" />

    <com.tcsl.myprinterdemo.view.FlowRadioGroup
        android:id="@+id/rg_cmdtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_cmd_esc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cmdtype_esc" />

        <RadioButton
            android:id="@+id/rb_cmd_tsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cmdtype_tsc" />

    </com.tcsl.myprinterdemo.view.FlowRadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/connect_type" />

    <com.tcsl.myprinterdemo.view.FlowRadioGroup
        android:id="@+id/rg_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rb_connect_usb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="USB"
            android:visibility="visible" />

    </com.tcsl.myprinterdemo.view.FlowRadioGroup>

    <ProgressBar
        android:id="@+id/pb_connect"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_device_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray2"
        android:gravity="center"
        android:padding="10dp"
        android:tag="-1"
        android:text="@string/please_connect"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/connect" />

</LinearLayout>